# anemotaxis

./: .gitignore  README.md  environment.yml  pyproject.toml
results/: summary_statistics.json
scripts/: analyze_combined.ipynb  analyze_single_anemotaxis.ipynb  baseline_behavior.ipynb  timothee_sharbat_behaviour_analysis_.ipynb  xy_axis_characterisation.ipynb
src/: compute_data_auto.py  data_loader.py  import_trx.py  otherfunctions.py  parse_data.py  plot_data.py  processor.py  trx_processor.py  utils.py
src/core/: data_loader.py  data_processor.py
src/utils/: preprocessing.py
src/viz/: plot_data.py
